--- a/models/mailmjml/fields.yaml
+++ b/models/mailmjml/fields.yaml
@@ -3,15 +3,23 @@
 # ===================================
 
 fields:
+    name: 
+        label: waka.mailmjml::lang.models.mailmjml.name
+        span: left
+        comment: waka.mailmjml::lang.models.mailmjml.name_com
+    slug:
+        label: waka.mailmjml::lang.models.mailmjml.slug
+        span: right
+        comment: waka.mailmjml::lang.models.mailmjml.slug_com
+    layout: 
+        label: waka.mailmjml::lang.models.mailmjml.layout
+        type: relation 
+        slect: name
     subject:
         label: waka.mailmjml::lang.models.mailmjml.subject
         span: left
         required: true
         permissions: [waka.mailer.*]
-    slug:
-        label: waka.mailmjml::lang.models.mailmjml.slug
-        span: right
-        comment: waka.mailmjml::lang.models.mailmjml.slug_com
 tabs:
     defaultTab: waka.mailmjml::lang.models.tab_edit
     icons: 
@@ -29,24 +37,24 @@ tabs:
             size: giant
             permissions: [waka.mailer.admin.super]
             tab: waka.mailmjml::lang.models.mailmjml.tab_edit
-        rule_asks:
-            label: waka.mailmjml::lang.models.mailmjml.rule_asks
-            span: full
-            type: rulebuilder
-            targetProductor: mailMjml
-            ruleMode: ask
-            showAttributes: true
-            permissions: [waka.rules.asks.*]
-            tab: waka.mailmjml::lang.models.mailmjml.tab_edit
-        rule_blocs:
-                label: waka.mailmjml::lang.models.mailmjml.rule_blocs
-                span: full
-                type: rulebuilder
-                targetProductor: mailMjml
-                ruleMode: bloc
-                comment: waka.mailmjml::lang.models.mailmjml.rule_blocs_com
-                permissions: [waka.mailer.admin.super]
-                tab: waka.mailmjml::lang.models.mailmjml.tab_contents
+        # rule_asks:
+        #     label: waka.mailmjml::lang.models.mailmjml.rule_asks
+        #     span: full
+        #     type: rulebuilder
+        #     targetProductor: mailMjml
+        #     ruleMode: ask
+        #     showAttributes: true
+        #     permissions: [waka.rules.asks.*]
+        #     tab: waka.mailmjml::lang.models.mailmjml.tab_edit
+        # rule_blocs:
+        #         label: waka.mailmjml::lang.models.mailmjml.rule_blocs
+        #         span: full
+        #         type: rulebuilder
+        #         targetProductor: mailMjml
+        #         ruleMode: bloc
+        #         comment: waka.mailmjml::lang.models.mailmjml.rule_blocs_com
+        #         permissions: [waka.mailer.admin.super]
+        #         tab: waka.mailmjml::lang.models.mailmjml.tab_contents
         config:
             type: nestedform
             usePanelStyles: false
