--- a/controllers/layouts/config_form.yaml
+++ b/controllers/layouts/config_form.yaml
@@ -23,7 +23,7 @@ create:
 # Update page
 update:
     title: backend::lang.form.update_title
-    redirect: waka/mailmjml/layouts
+    redirect: waka/mailmjml/layouts/update/:id
     redirectClose: waka/mailmjml/layouts
 
 # Preview page
