--- a/wakadocs.yaml
+++ b/wakadocs.yaml
@@ -3,6 +3,6 @@ files:
         title: Data source
         category_slug: "modules"
         comment: "Gestion des Mails MJML"
-        permission: waka.docser.modules
+        permissions: waka.docser.modules
         relativePath: waka/maatexcel/docs
         sort_order: 1000
