--- a/controllers/mailmjmls/config_waka.yaml
+++ b/controllers/mailmjmls/config_waka.yaml
@@ -10,7 +10,7 @@ workflow: false
 
 
 controllerConfig:
-    breadcrump:
+    breadcrumb:
         inSettings: true 
         title: waka.mailmjml::lang.models.mailmjml.label
         rows: 
